# infomaniak-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: commands.md  implementation-plan.md  mail-setup.md  release.md  security.md  setup-and-profiles.md  vision.md
scripts/: smoke_install.sh
src/infomaniak_cli/: __init__.py  api.py  auth.py  bootstrap.py  cli.py  config_paths.py  debug.py  doctor.py  output.py  pathcheck.py  profiles.py  readiness.py  secure_store.py  update.py
src/infomaniak_cli/services/: __init__.py  account.py  admin.py  calendar.py  chat.py  contacts.py  dav_discovery.py  drive.py  mail.py  mail_discovery.py
tests/: conftest.py  test_account.py  test_admin.py  test_api.py  test_auth.py  test_auth_cli.py  test_bootstrap.py  test_calendar.py  test_chat.py  test_cli.py  test_config_paths.py  test_contacts.py  test_dav_discovery.py  test_debug.py  test_doctor.py  test_drive.py  test_mail_cli.py  test_mail_discovery.py  test_mail_service.py  test_output.py  test_pathcheck.py  test_profiles.py  test_readiness.py  test_secure_store.py  test_update.py
