[project]
name = "infomaniak-cli"
version = "0.1.0"
description = "Unified CLI bridge for Informaniak/kSuite with profiles and optional future MCP support."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gui" }]
dependencies = []

[project.scripts]
ik = "infomaniak_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
