[project]
name = "infomaniak-cli"
version = "0.1.6"
description = "Unified CLI bridge for Informaniak/kSuite with profiles and optional future MCP support."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gui" }]
license = "MIT"
keywords = ["infomaniak", "ksuite", "cli", "kdrive", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/VidGuiCode/infomaniak-cli"
Repository = "https://github.com/VidGuiCode/infomaniak-cli"
Issues = "https://github.com/VidGuiCode/infomaniak-cli/issues"
Documentation = "https://github.com/VidGuiCode/infomaniak-cli#readme"

[project.scripts]
ik = "infomaniak_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
